--- a/pages/404.html
+++ b/pages/404.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KRG CONTROLS</title>
+    <title>KRG Controls</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/3faed25249.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/img/favicon-32x32.png" </head>
+    <link rel="icon" href="../assets/img/favicon-32x32.png" </head>
+</head>
 
-<body>
+<body class="backgroundBody">
     <header class="shadow-lg p-3 mb-5 bg-body header">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -44,70 +45,12 @@
                 </div>
             </nav>
         </div>
-
-        <section>
-            <div class="contenedorTituloheader">
-                <h1>Desarrollamos Soluciones en el ámbito de la Ingeniería mecánica</h1>
-                <p>KRG CONTROLS SAS</p>
-            </div>
-
-            <img src="./assets/img/condicionado.png" alt="Image">
-
-        </section>
     </header>
-    <main class="main">
-        <hr class="marginHr">
-        <section class="container">
-            <h1>Nuestro Servicio</h1>
-            <p>Puedes encontrar todo lo que ofrecemos a un solo click</p>
-            <div class="card-group">
-                <div class="card">
-                    <a href="./pages/galeria.html"><img src="./assets/img/aire.png" alt="Galeria"
-                            class="card-img-top"></a>
-                    <div class="card-body">
-                        <h2 class="card-title">Galeria</h2>
-                        <p class="card-text">Te invitamos a conocer nuestros servicios a lo largo de nuestra carrera.
-                        </p>
 
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="./pages/galeria.html"><img src="./assets/img/Logo2.jpg" alt="eventos"
-                            class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5 class="card-title">Eventos</h5>
-                        <p class="card-text">Te mostramos todos nuestros eventos en nuestras principales ciudades del
-                            pais.</p>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <a href="./pages/galeria.html"><img src="./assets/img/empresa.jpg" alt="nosotros"
-                            class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5 class="card-title">Nosotros</h5>
-                        <p class="card-text">Aquí conoceras quienes somos y el por qué de nuestra exelencia en el
-                            mercado.</p>
-
-                    </div>
-                </div>
-            </div>
-            <!-- 
-            <div class="card">
-                <a href="./pages/galeria.html"><img src="./assets/img/aire.png" alt="productos"></a>
-                <h3>Galeria</h3>
-            </div>
-            <div class="card">
-                <a href="./pages/eventos.html"><img src="./assets/img/Logo2.jpg" alt="eventos"></a>
-                <h3>Eventos</h3>
-            </div>
-            <div class="card">
-                <a href="./pages/nosotros.html"><img src="./assets/img/empresa.jpg" alt="nosotros"></a>
-                <h3>Nosotros</h3>
-            </div>
-            -->
-        </section>
-        <hr class="marginHr">
+    <main class="main404">
+        <div class="contenedor404">
+            <h1>404 - Página No Encontrada</h1>
+            <a href="index.html" class="btn404">Volver Atrás</a>
     </main>
 
     <footer>
@@ -115,47 +58,57 @@
             <a href="https://www.instagram.com/" target="_blank"><i class="iconI fa-brands fa-instagram iconos"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="iconF fa-brands fa-facebook iconos"></i></a>
             <a href="https://web.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp iconos"></i></a>
-
+            <h3 class="siguenos">Síguenos: </h3>
         </div>
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-3">
                     <h4>Preguntas Precuentes</h4>
                     <ul class="fs-5">
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Términos y Condiciones</a>
+                        </li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Método de Pago</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Angenda tu Clase</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h4>Quienes Somos</h4>
                     <ul class="fs-5">
-                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nosotros</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nuestros Valores</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nuestros Profesores</a>
+                        </li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nuestra Metodología</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h4>Eventos</h4>
+                    <h4>Trabaja con nosotros</h4>
                     <ul class="fs-5">
-                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nacional</a></li>
-                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Internacional</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Reclutamiento de
+                                Profesores</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Imparte tus Clases Desde
+                                Cualquier
+                                Lugar</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <ul class="fs-5">
-                        <h4>Contacto</h4>
-                        <p>Correo: alehello1983@gmail.com</p>
-                        <p>Whatsapp: 58092562</p>
-                    </ul>
+                    <h4>Contacto</h4>
+                    <p>Calle 12345</p>
+                    <p>BOGOTÁ D.C, Bogotá, COL</p>
+                    <p>Correo: and8080@gmail.com</p>
+                    <p>Phone: +57 3157499995</p>
+                    <p>Whatsapp: +57 3157499995</p>
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-center">Todos Los Derechos Reservados - Alejandro Ramírez &copy </p>
-                    <p class="text-center"><a
-                            href="https://www.freepik.com/free-vector/abstract-geometric-wireframe-background_13295527.htm#query=website%20background&position=49&from_view=keyword&track=ais">Image
-                            by pikisuperstar</a> on Freepik</p>
+                    <p class="text-center">&copy; 2023 - Todos Los Derechos Reservados</p>
                 </div>
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
