--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,43 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KRG Controls</title>
-    <!--bts-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-</head>
+    <script src="https://kit.fontawesome.com/3faed25249.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="../assets/img/favicon-32x32.png" </head>
 
 <body>
-    <header class="header">
-        <div>
+    <header class="shadow-lg p-3 mb-5 bg-body header">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="../assets/img/Logo.png" alt="Logo" width="150px" </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link active text-black" aria-current="page"
-                                        href="../index.html">Inicio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="galeria.html">Galeria</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contacto</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="eventos.html">Eventos</a>
-                                </li>
-                            </ul>
-                        </div>
+                <div class="text-white container-fluid">
+                    <a class="navbar-brand logoHeader" href="../index.html"><img src="../assets/img/logo.png"
+                            alt="KRG"></a>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse flex-row-reverse me-5 hoverLink" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link active" aria-current="page"
+                                    href="../index.html">Inicio</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="galeria.html">Galeria</a>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="#">Contacto</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="eventos.html">Eventos</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -62,42 +62,51 @@
         -->
         <section>
             <div class="contenedorTituloheader">
-                <h1>En el año 2025, continuar con un equipo humano altamente comprometido y calificado logrando ser
-                    reconocidos como la mejor opción para las soluciones de automatización en el mercado, entregando
-                    productos y servicios con responsabilidad social y ambiental de alta calidad.</h1>
+                <img src="../assets/img/contacto.png" alt="Image">
                 <p>KRG CONTROLS SAS</p>
+                
             </div>
 
         </section>
     </header>
     <main>
-        <!--formulario de contacto-->
-        <form action="">
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
-            <label for="mensaje">Mensaje</label>
-            <input type="mensaje" name="mensaje" id="mensaje">
-            <textarea name="mensaje" id="mensaje" cols="30" rows="1"></textarea>
-            <input type="submit" value="enviar">
-        </form>
-
+        <div class="contenedorContacto">
+            <h1>Contacto</h1>
+            <form action="404.html" method="post">
+                <div class="formContacto">
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="name" placeholder="Ingrese su Nombre Completo" required>
+                </div>
+                <div class="formContacto">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" placeholder="Ingrese su Correo Electrónico" required>
+                </div>
+                <div class="formContacto">
+                    <label for="message">Mensaje:</label>
+                    <textarea id="message" name="message" placeholder="Ingrese un Comentario" required></textarea>
+                </div>
+                <button type="submit" class="botonEnviarContacto">Enviar</button>
+            </form>
+        </div>
     </main>
     <footer class="footer">
-        <p>Todos los derechos reservados© - Alejandro Ramirez</p>
-        <div>
-            <a class="linkRedes" href="https://www.instagram.com/" target="_blank" <i
-                class="fa-brands fa-instagram fa-beat"></i></a>
-            <a class="linkRedes" href="https://www.whatsaap.com/" target="_blank" <i
-                class="fa-brands fa-whatsapp"></i></a>
-            <a class="linkRedes" href="https://www.facebook.com/" target="_blank" <i
-                class="fa-brands fa-facebook"></i></a>
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <a href="https://www.instagram.com/" target="_blank"><i class="iconI fa-brands fa-instagram iconos"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="iconF fa-brands fa-facebook iconos"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp iconos"></i></a>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-12">
+                <p class="text-center">Todos Los Derechos Reservados - Alejandro Ramírez &copy </p>
+                <p class="text-center"><a
+                        href="https://www.freepik.com/free-vector/abstract-geometric-wireframe-background_13295527.htm#query=website%20background&position=49&from_view=keyword&track=ais">Image
+                        by pikisuperstar</a> on Freepik</p>
+            </div>
+        </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
