--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,39 +10,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-</head>
+    <script src="https://kit.fontawesome.com/3faed25249.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="../assets/img/favicon-32x32.png" </head>
 
 <body>
-    <header class="header">
-        <div>
+    <header class="shadow-lg p-3 mb-5 bg-body header">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="../assets/img/Logo.png" alt="Logo" width="150px" </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link active text-black" aria-current="page"
-                                        href="../index.html">Inicio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Galeria</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contacto.html">Contacto</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="eventos.html">Eventos</a>
-                                </li>
-                            </ul>
-                        </div>
+                <div class="text-white container-fluid">
+                    <a class="navbar-brand logoHeader" href="../index.html"><img src="../assets/img/logo.png"
+                            alt="KRG"></a>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse flex-row-reverse me-5 hoverLink" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link active" aria-current="page"
+                                    href="../index.html">Inicio</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="#">Galeria</a>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="contacto.html">Contacto</a>
+                            </li>
+                            <li class="fs-4 nav-item">
+                                <a class="text-black nav-link" href="eventos.html">Eventos</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -62,8 +63,8 @@
         -->
         <section>
             <div class="contenedorTituloheader">
+                <img src="../assets/img/flower.png" alt="Image">
                 <h1>Galeria</h1>
-                <p>Algunas Imagenes</p>
             </div>
 
         </section>
@@ -107,14 +108,48 @@
         <hr class="marginHr">
     </main>
     <footer class="footer">
-        <p>Todos los derechos reservados© - Alejandro Ramirez</p>
-        <div>
-            <a class="linkRedes" href="https://www.instagram.com/" target="_blank" <i
-                class="fa-brands fa-instagram fa-beat"></i></a>
-            <a class="linkRedes" href="https://www.whatsaap.com/" target="_blank" <i
-                class="fa-brands fa-whatsapp"></i></a>
-            <a class="linkRedes" href="https://www.facebook.com/" target="_blank" <i
-                class="fa-brands fa-facebook"></i></a>
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <a href="https://www.instagram.com/" target="_blank"><i class="iconI fa-brands fa-instagram iconos"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="iconF fa-brands fa-facebook iconos"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp iconos"></i></a>
+        </div>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-3">
+                    <h4>Preguntas Precuentes</h4>
+                    <ul class="fs-5">
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4>Quienes Somos</h4>
+                    <ul class="fs-5">
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nosotros</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4>Eventos</h4>
+                    <ul class="fs-5">
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Nacional</a></li>
+                        <li class="nav-link active"><a class="nav-link footerLinks" href="#">Internacional</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul class="fs-5">
+                        <h4>Contacto</h4>
+                        <p>Correo: alehello1983@gmail.com</p>
+                        <p>Whatsapp: 58092562</p>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center">Todos Los Derechos Reservados - Alejandro Ramírez &copy</p>
+                    <p class="text-center"><a
+                            href="https://www.freepik.com/free-vector/abstract-geometric-wireframe-background_13295527.htm#query=website%20background&position=49&from_view=keyword&track=ais">Image
+                            by pikisuperstar</a> on Freepik</p>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
